[tool.poetry]
name = "statespace"
version = "0.1.0"
description = ""
authors = ["Nicholas T Dimidik <nicholas.dimidik@sjsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
